syntax = "proto3";

option csharp_namespace = "Scheduler.SyncService";

package schedulersync;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service SchedulerSync {
	rpc Register (RegistrationRequest) returns (StatusResponse);
	rpc Unregister (ClientIdRequest) returns (StatusResponse);
	rpc SyncWait (ClientIdRequest) returns (SyncWaitResponse);
	rpc Keepalive (ClientIdRequest) returns (StatusResponse);
}

enum ClientState {
	STARTING = 0;
	READY = 1;
	WAITING = 2;
	IMAGING = 3;
	ENDING = 4;
}

message RegistrationRequest {
  string guid = 1;
  string profileId = 2;
  int32 pid = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message ClientIdRequest {
  string guid = 1;
  ClientState clientState = 2;
}

message StatusResponse {
	bool success = 1;
	string message = 2;
}

message SyncWaitResponse {
	bool success = 1;
	bool continue = 2;
}
